--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Below is the link to the stylesheet CSS file -->
-    <link rel="stylesheet" href="https://raw.githubusercontent.com/CharlieDovey98/SuperSchoolStore-Website-Back-End/main/style.css">
+    <link rel="stylesheet" href="http://superschoolstore.eu-west-2.elasticbeanstalk.com/static/BackEnd/Css/style.css">
     <!-- Below is the link to the JavaScript file -->
-    <script src="https://raw.githubusercontent.com/CharlieDovey98/SuperSchoolStore-Website-Back-End/main/script.js" defer></script>
+    <script src="http://superschoolstore.eu-west-2.elasticbeanstalk.com/static/Javascript/script.js" defer></script>
     <!-- Below is the link for the Vue.js package -->
     <script src="https://unpkg.com/vue@2.7.8/dist/vue.js"></script>
     <title>SuperSchoolStore</title>
