--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Below is the link to the stylesheet CSS file -->
     <link rel="stylesheet" href="Css/style.css">
-    <!-- Below is the link to the JavaScript file -->
-    <script src="Javascript/script.js" defer></script>
+    <!-- Below is the link to the Vue App .js file -->
+    <script src="Javascript/vue.js" defer></script>
     <!-- Below is the link for the Vue.js package -->
     <script src="https://unpkg.com/vue@2.7.8/dist/vue.js"></script>
     <title>SuperSchoolStore</title>
