Updated submitCheckout method to call a POST request to update the purchases collection.

--- a/index.html
+++ b/index.html
@@ -229,12 +229,12 @@
                 <form v-on:submit.prevent="submitCheckout">
                     <h3>Purchase Information</h3>
                     <label>
-                        First Name:
-                        <input type="text" v-model="user.firstName" required />
+                        Forename:
+                        <input type="text" v-model="user.forename" required />
                     </label>
                     <label>
                         Surname:
-                        <input type="text" v-model="user.lastName" required />
+                        <input type="text" v-model="user.surname" required />
                     </label>
                     <label>
                         Email:
