--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
         <div id="headerContainer">
             <header class="indexPageHeader">
                 <div class="homeDiv" v-on:click="showAboutUs">
-                    <img src="Images/education.png" alt="Logo" class="s3Logo">
+                    <img src="getFullImageUrl(images/education.png)" alt="Logo" class="s3Logo">
                     <p>S3</p>
                 </div>
                 <h1>SuperSchoolStore</h1>
                 <div class="shoppingDiv" v-on:click="showShoppingPage">
-                    <img src="Images/certificate.png" alt="Go To Shop" class="shopLessonsPNG">
+                    <img src="getFullImageUrl(images/certificate.png)" alt="Go To Shop" class="shopLessonsPNG">
                     <p>Go Shopping</p>
                 </div>
                 <div class="checkoutDiv" v-on:click="showCheckoutPage">
-                    <img src="Images/shoppingCart.png" alt="Checkout" class="shoppingCartPNG">
+                    <img src="getFullImageUrl(images/shoppingCart.png/" alt="Checkout" class="shoppingCartPNG">
                     <span class="cartItems" v-if="currentPage !== 'checkout'">Checkout {{ itemsInTheCart }} </span>
                     <span class="cartItems" v-else>Back To Shopping </span>
                 </div>
@@ -175,7 +175,7 @@
                     above.</p>
                 <div class="lesson" v-for="lesson in updatedLessons" :key="lesson.id">
                     <figure>
-                        <img v-bind:src="lesson.image" class="lesson-image" :alt="lesson.title">
+                        <img v-bind:src="getFullImageUrl(lesson.image)" class="lesson-image" :alt="lesson.title">
                     </figure>
                     <div class="lesson-info">
                         <h3 v-text="lesson.title"></h3>
@@ -209,7 +209,7 @@
                         <li v-for="(lesson, lessonIndex) in cart" :key="lesson.id">
                             <div class="lessons-in-cart">
                                 <figure>
-                                    <img v-bind:src="lesson.image" class="lessonImageInCart" :alt="lesson.title">
+                                    <img v-bind:src="getFullImageUrl(lesson.image)" class="lessonImageInCart" :alt="lesson.title">
                                 </figure>
                                 {{ lesson.title }} at {{lesson.location}} £{{ lesson.price.toFixed(2) }}
                             </div>
