Updated image file pathing syntax errors.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <p>Go Shopping</p>
                 </div>
                 <div class="checkoutDiv" v-on:click="showCheckoutPage">
-                    <img src="getFullImageUrl(images/shoppingCart.png/" alt="Checkout" class="shoppingCartPNG">
+                    <img src="getFullImageUrl(images/shoppingCart.png)" alt="Checkout" class="shoppingCartPNG">
                     <span class="cartItems" v-if="currentPage !== 'checkout'">Checkout {{ itemsInTheCart }} </span>
                     <span class="cartItems" v-else>Back To Shopping </span>
                 </div>
